--- a/testing.ipynb
+++ b/testing.ipynb
@@ -4,64 +4,38 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "# Testing DNE from Paper\n",
+    "# Testing\n",
     "\n",
-    "[Towards Continual Adaptation in Industrial Anomaly Detection](CAD_paper.pdf)"
+    "Testing out DNE method, possibly along with others, to get a working version\n",
+    "\n",
+    "_Had issues with PyTorch 2.5.0, so downgraded to 2.4.0_"
    ],
-   "id": "3df64696b838b953"
+   "id": "d5f4a1dfda24cabc"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-14T15:42:45.377181Z",
-     "start_time": "2024-10-14T15:42:45.373288Z"
+     "end_time": "2024-10-16T22:39:22.893631Z",
+     "start_time": "2024-10-16T22:39:22.891278Z"
     }
    },
    "cell_type": "code",
-   "source": "dir()",
-   "id": "94ed0e3dbe7b0196",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['In',\n",
-       " 'Out',\n",
-       " '_',\n",
-       " '_1',\n",
-       " '__',\n",
-       " '___',\n",
-       " '__builtin__',\n",
-       " '__builtins__',\n",
-       " '__doc__',\n",
-       " '__loader__',\n",
-       " '__name__',\n",
-       " '__package__',\n",
-       " '__session__',\n",
-       " '__spec__',\n",
-       " '_dh',\n",
-       " '_i',\n",
-       " '_i1',\n",
-       " '_i2',\n",
-       " '_ih',\n",
-       " '_ii',\n",
-       " '_iii',\n",
-       " '_oh',\n",
-       " '_pydevd_bundle',\n",
-       " 'exit',\n",
-       " 'get_ipython',\n",
-       " 'open',\n",
-       " 'pydev_jupyter_vars',\n",
-       " 'quit',\n",
-       " 'remove_imported_pydev_package',\n",
-       " 'sys']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": "",
+   "id": "91eba2ce5abda33",
+   "outputs": [],
    "execution_count": 2
+  },
+  {
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "f73adda2b8ffc874",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -69,7 +43,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "f90ad5ecead1b459"
+   "id": "42c8004327d00b63"
   }
  ],
  "metadata": {
