testing on original code so far

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -526,23 +526,29 @@
    "execution_count": 66
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-29T21:21:06.467066Z",
+     "start_time": "2024-10-29T21:21:06.455916Z"
+    }
+   },
    "cell_type": "code",
+   "source": "('hello' / \"traom\" / 'good').glob('*.png')",
+   "id": "9f7e56857663dc52",
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1258"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for /: 'str' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[2], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m (\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mhello\u001B[39m\u001B[38;5;124m'\u001B[39m \u001B[38;5;241m/\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mtraom\u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;241m/\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mgood\u001B[39m\u001B[38;5;124m'\u001B[39m)\u001B[38;5;241m.\u001B[39mglob(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m*.png\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
+      "\u001B[1;31mTypeError\u001B[0m: unsupported operand type(s) for /: 'str' and 'str'"
+     ]
     }
    ],
-   "execution_count": 9,
-   "source": "",
-   "id": "9f7e56857663dc52"
+   "execution_count": 2
   },
   {
    "metadata": {},
