--- a/original_code/testing.ipynb
+++ b/original_code/testing.ipynb
@@ -164,7 +164,7 @@
    "source": [
     "\"\"\"Main training loop implementing the CAD framework\n",
     "\n",
-    "This is taken from main.py exactly, with only removals being for different methods (like other AD/CL methods)\n",
+    "This is taken from main.py exactly, with only code removals being for different methods (like other AD/CL methods), but the main.py is unchanged\n",
     "\"\"\"\n",
     "# Set environment params, and implemented a different get_args() to\n",
     "# work in Jupyter\n",
