--- a/original_code/testing.ipynb
+++ b/original_code/testing.ipynb
@@ -232,7 +232,7 @@
     "        eval_model(args, epoch, dataloaders_test, learned_tasks, net, density)\n",
     "        net.train()\n",
     "\n",
-    "    # Save final model and density estimator after each tasl\n",
+    "    # Save final model and density estimator after each task\n",
     "    if args.save_checkpoint:\n",
     "        torch.save(net, f'{args.save_path}/net_task{t}.pth')\n",
     "        torch.save(density, f'{args.save_path}/density_task{t}.pth')"
