--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-03T18:21:46.238580Z",
-     "start_time": "2025-03-03T18:21:46.233269Z"
+     "end_time": "2025-03-03T18:38:31.172016Z",
+     "start_time": "2025-03-03T18:38:31.162562Z"
     }
    },
    "cell_type": "code",
@@ -19,26 +19,20 @@
     "import os\n",
     "import numpy as np\n",
     "from utils.general_utils import create_mvtec_supervised\n",
-    "from datasets.datasets import mvtec\n",
+    "from datasets.mvtec import mvtec\n",
     "\n",
     "### Creating MVTEC supervised dataset\n",
     "# First, we get statistics where we find what is the distribution of the number of images per anomaly-type, across all categories to\n",
     "# see how many average number of images in each of the test anomalous classes\n",
-    "num_vals = []\n",
-    "path = 'datasets/mvtec_anomaly_detection/supervised/'\n",
-    "for cat in os.listdir(path):\n",
-    "    if \".\" not in cat:\n",
-    "        for anom_class in os.listdir(path+cat+\"/test/\"):\n",
-    "            if \".\" not in anom_class:\n",
-    "                if anom_class != \"good\":\n",
-    "                    num_vals.append(len(os.listdir(path+cat+\"/test/\"+anom_class)))\n",
-    "\n",
-    "num_vals = np.array(num_vals)\n",
-    "print(num_vals.min(), num_vals.max(), num_vals.mean(), num_vals.std(), sep=\"\\n\")\n",
     "# On average, we have about 17 images per anomalous class. In practice, we don't often have access to that many anomalous cases, so let's use 20% for testing and 80% for training.\n",
     "\n",
     "create_supervised = False # we will set this to false after it's done, but we want to keep track of the code\n",
-    "if create_supervised: create_mvtec_supervised()"
+    "if create_supervised: create_mvtec_supervised()\n",
+    "\n",
+    "### Creating MTD dataset\n",
+    "# First, let's see how many images we have for ecah anomaly type\n",
+    "## We have 5 anomalous classes and 1 normal class. There are 1344 images in total,\n",
+    "# with ~70% of those being normal images. Since there's a bit of a class imbalance, let's also use 70% for training and 30% for testing, which will give us about 400 images in testing"
    ],
    "id": "684b1f564ab9609d",
    "outputs": [
@@ -49,11 +43,15 @@
       "6\n",
       "24\n",
       "13.863013698630137\n",
-      "4.457762410912128\n"
+      "4.457762410912128\n",
+      "\n",
+      "[103.0, 85.0, 115.0, 32.0, 57.0, 952.0]\n",
+      "total mtd images: 1344.0\n",
+      "pct normal images: 0.7083333333333334\n"
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 3
   },
   {
    "metadata": {
