--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -9,16 +9,16 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-03T18:38:31.172016Z",
-     "start_time": "2025-03-03T18:38:31.162562Z"
+     "end_time": "2025-03-05T03:34:00.351295Z",
+     "start_time": "2025-03-05T03:34:00.346478Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# from datasets.datasets import mvtec\n",
+    "import datasets\n",
     "import os\n",
     "import numpy as np\n",
-    "from utils.general_utils import create_mvtec_supervised\n",
+    "# from utils.general_utils import create_mvtec_supervised\n",
     "from datasets.mvtec import mvtec\n",
     "\n",
     "### Creating MVTEC supervised dataset\n",
@@ -26,32 +26,22 @@
     "# see how many average number of images in each of the test anomalous classes\n",
     "# On average, we have about 17 images per anomalous class. In practice, we don't often have access to that many anomalous cases, so let's use 20% for testing and 80% for training.\n",
     "\n",
-    "create_supervised = False # we will set this to false after it's done, but we want to keep track of the code\n",
-    "if create_supervised: create_mvtec_supervised()\n",
+    "create_mvtec = False # we will set this to false after it's done, but we want to keep track of the code\n",
+    "if create_mvtec: datasets.create_mvtec_supervised()\n",
     "\n",
     "### Creating MTD dataset\n",
     "# First, let's see how many images we have for ecah anomaly type\n",
     "## We have 5 anomalous classes and 1 normal class. There are 1344 images in total,\n",
-    "# with ~70% of those being normal images. Since there's a bit of a class imbalance, let's also use 70% for training and 30% for testing, which will give us about 400 images in testing"
+    "# with ~70% of those being normal images. Since there's a bit of a class imbalance, let's also use 70% for training and 30% for testing, which will give us about 400 images in testing\n",
+    "\n",
+    "create_mtd = False\n",
+    "if create_mtd: \n",
+    "    datasets.create_mtd_supervised()\n",
+    "    datasets.create_mtd_unsupervised()"
    ],
    "id": "684b1f564ab9609d",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n",
-      "24\n",
-      "13.863013698630137\n",
-      "4.457762410912128\n",
-      "\n",
-      "[103.0, 85.0, 115.0, 32.0, 57.0, 952.0]\n",
-      "total mtd images: 1344.0\n",
-      "pct normal images: 0.7083333333333334\n"
-     ]
-    }
-   ],
-   "execution_count": 3
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "metadata": {
