planned project, started on IUF implementation

--- a/Methods/IUF/iuf_testing.ipynb
+++ b/Methods/IUF/iuf_testing.ipynb
@@ -11,12 +11,30 @@
    "id": "79cd97f4118f2f3d"
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-19T15:46:46.503802Z",
+     "start_time": "2025-05-19T15:46:41.642231Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "from torchvision.models.vision_transformer import vit_b_16"
+   ],
+   "id": "d72cdfd011c9690b",
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "d72cdfd011c9690b"
+   "id": "336582b45ebc619a"
   }
  ],
  "metadata": {
