--- a/Methods/IUF/iuf_testing.ipynb
+++ b/Methods/IUF/iuf_testing.ipynb
@@ -13,8 +13,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-19T15:46:46.503802Z",
-     "start_time": "2025-05-19T15:46:41.642231Z"
+     "end_time": "2025-05-20T14:04:23.571879Z",
+     "start_time": "2025-05-20T14:04:23.569616Z"
     }
    },
    "cell_type": "code",
@@ -22,11 +22,258 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "from torchvision.models.vision_transformer import vit_b_16"
+    "from torchvision.models.vision_transformer import vit_b_16, ViT_B_16_Weights"
    ],
    "id": "d72cdfd011c9690b",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-20T14:04:24.479650Z",
+     "start_time": "2025-05-20T14:04:24.008444Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "vit = vit_b_16(weights=ViT_B_16_Weights.DEFAULT)\n",
+    "print(vit)"
+   ],
+   "id": "336582b45ebc619a",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VisionTransformer(\n",
+      "  (conv_proj): Conv2d(3, 768, kernel_size=(16, 16), stride=(16, 16))\n",
+      "  (encoder): Encoder(\n",
+      "    (dropout): Dropout(p=0.0, inplace=False)\n",
+      "    (layers): Sequential(\n",
+      "      (encoder_layer_0): EncoderBlock(\n",
+      "        (ln_1): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "        (self_attention): MultiheadAttention(\n",
+      "          (out_proj): NonDynamicallyQuantizableLinear(in_features=768, out_features=768, bias=True)\n",
+      "        )\n",
+      "        (dropout): Dropout(p=0.0, inplace=False)\n",
+      "        (ln_2): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "        (mlp): MLPBlock(\n",
+      "          (0): Linear(in_features=768, out_features=3072, bias=True)\n",
+      "          (1): GELU(approximate='none')\n",
+      "          (2): Dropout(p=0.0, inplace=False)\n",
+      "          (3): Linear(in_features=3072, out_features=768, bias=True)\n",
+      "          (4): Dropout(p=0.0, inplace=False)\n",
+      "        )\n",
+      "      )\n",
+      "      (encoder_layer_1): EncoderBlock(\n",
+      "        (ln_1): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "        (self_attention): MultiheadAttention(\n",
+      "          (out_proj): NonDynamicallyQuantizableLinear(in_features=768, out_features=768, bias=True)\n",
+      "        )\n",
+      "        (dropout): Dropout(p=0.0, inplace=False)\n",
+      "        (ln_2): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "        (mlp): MLPBlock(\n",
+      "          (0): Linear(in_features=768, out_features=3072, bias=True)\n",
+      "          (1): GELU(approximate='none')\n",
+      "          (2): Dropout(p=0.0, inplace=False)\n",
+      "          (3): Linear(in_features=3072, out_features=768, bias=True)\n",
+      "          (4): Dropout(p=0.0, inplace=False)\n",
+      "        )\n",
+      "      )\n",
+      "      (encoder_layer_2): EncoderBlock(\n",
+      "        (ln_1): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "        (self_attention): MultiheadAttention(\n",
+      "          (out_proj): NonDynamicallyQuantizableLinear(in_features=768, out_features=768, bias=True)\n",
+      "        )\n",
+      "        (dropout): Dropout(p=0.0, inplace=False)\n",
+      "        (ln_2): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "        (mlp): MLPBlock(\n",
+      "          (0): Linear(in_features=768, out_features=3072, bias=True)\n",
+      "          (1): GELU(approximate='none')\n",
+      "          (2): Dropout(p=0.0, inplace=False)\n",
+      "          (3): Linear(in_features=3072, out_features=768, bias=True)\n",
+      "          (4): Dropout(p=0.0, inplace=False)\n",
+      "        )\n",
+      "      )\n",
+      "      (encoder_layer_3): EncoderBlock(\n",
+      "        (ln_1): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "        (self_attention): MultiheadAttention(\n",
+      "          (out_proj): NonDynamicallyQuantizableLinear(in_features=768, out_features=768, bias=True)\n",
+      "        )\n",
+      "        (dropout): Dropout(p=0.0, inplace=False)\n",
+      "        (ln_2): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "        (mlp): MLPBlock(\n",
+      "          (0): Linear(in_features=768, out_features=3072, bias=True)\n",
+      "          (1): GELU(approximate='none')\n",
+      "          (2): Dropout(p=0.0, inplace=False)\n",
+      "          (3): Linear(in_features=3072, out_features=768, bias=True)\n",
+      "          (4): Dropout(p=0.0, inplace=False)\n",
+      "        )\n",
+      "      )\n",
+      "      (encoder_layer_4): EncoderBlock(\n",
+      "        (ln_1): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "        (self_attention): MultiheadAttention(\n",
+      "          (out_proj): NonDynamicallyQuantizableLinear(in_features=768, out_features=768, bias=True)\n",
+      "        )\n",
+      "        (dropout): Dropout(p=0.0, inplace=False)\n",
+      "        (ln_2): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "        (mlp): MLPBlock(\n",
+      "          (0): Linear(in_features=768, out_features=3072, bias=True)\n",
+      "          (1): GELU(approximate='none')\n",
+      "          (2): Dropout(p=0.0, inplace=False)\n",
+      "          (3): Linear(in_features=3072, out_features=768, bias=True)\n",
+      "          (4): Dropout(p=0.0, inplace=False)\n",
+      "        )\n",
+      "      )\n",
+      "      (encoder_layer_5): EncoderBlock(\n",
+      "        (ln_1): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "        (self_attention): MultiheadAttention(\n",
+      "          (out_proj): NonDynamicallyQuantizableLinear(in_features=768, out_features=768, bias=True)\n",
+      "        )\n",
+      "        (dropout): Dropout(p=0.0, inplace=False)\n",
+      "        (ln_2): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "        (mlp): MLPBlock(\n",
+      "          (0): Linear(in_features=768, out_features=3072, bias=True)\n",
+      "          (1): GELU(approximate='none')\n",
+      "          (2): Dropout(p=0.0, inplace=False)\n",
+      "          (3): Linear(in_features=3072, out_features=768, bias=True)\n",
+      "          (4): Dropout(p=0.0, inplace=False)\n",
+      "        )\n",
+      "      )\n",
+      "      (encoder_layer_6): EncoderBlock(\n",
+      "        (ln_1): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "        (self_attention): MultiheadAttention(\n",
+      "          (out_proj): NonDynamicallyQuantizableLinear(in_features=768, out_features=768, bias=True)\n",
+      "        )\n",
+      "        (dropout): Dropout(p=0.0, inplace=False)\n",
+      "        (ln_2): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "        (mlp): MLPBlock(\n",
+      "          (0): Linear(in_features=768, out_features=3072, bias=True)\n",
+      "          (1): GELU(approximate='none')\n",
+      "          (2): Dropout(p=0.0, inplace=False)\n",
+      "          (3): Linear(in_features=3072, out_features=768, bias=True)\n",
+      "          (4): Dropout(p=0.0, inplace=False)\n",
+      "        )\n",
+      "      )\n",
+      "      (encoder_layer_7): EncoderBlock(\n",
+      "        (ln_1): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "        (self_attention): MultiheadAttention(\n",
+      "          (out_proj): NonDynamicallyQuantizableLinear(in_features=768, out_features=768, bias=True)\n",
+      "        )\n",
+      "        (dropout): Dropout(p=0.0, inplace=False)\n",
+      "        (ln_2): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "        (mlp): MLPBlock(\n",
+      "          (0): Linear(in_features=768, out_features=3072, bias=True)\n",
+      "          (1): GELU(approximate='none')\n",
+      "          (2): Dropout(p=0.0, inplace=False)\n",
+      "          (3): Linear(in_features=3072, out_features=768, bias=True)\n",
+      "          (4): Dropout(p=0.0, inplace=False)\n",
+      "        )\n",
+      "      )\n",
+      "      (encoder_layer_8): EncoderBlock(\n",
+      "        (ln_1): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "        (self_attention): MultiheadAttention(\n",
+      "          (out_proj): NonDynamicallyQuantizableLinear(in_features=768, out_features=768, bias=True)\n",
+      "        )\n",
+      "        (dropout): Dropout(p=0.0, inplace=False)\n",
+      "        (ln_2): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "        (mlp): MLPBlock(\n",
+      "          (0): Linear(in_features=768, out_features=3072, bias=True)\n",
+      "          (1): GELU(approximate='none')\n",
+      "          (2): Dropout(p=0.0, inplace=False)\n",
+      "          (3): Linear(in_features=3072, out_features=768, bias=True)\n",
+      "          (4): Dropout(p=0.0, inplace=False)\n",
+      "        )\n",
+      "      )\n",
+      "      (encoder_layer_9): EncoderBlock(\n",
+      "        (ln_1): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "        (self_attention): MultiheadAttention(\n",
+      "          (out_proj): NonDynamicallyQuantizableLinear(in_features=768, out_features=768, bias=True)\n",
+      "        )\n",
+      "        (dropout): Dropout(p=0.0, inplace=False)\n",
+      "        (ln_2): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "        (mlp): MLPBlock(\n",
+      "          (0): Linear(in_features=768, out_features=3072, bias=True)\n",
+      "          (1): GELU(approximate='none')\n",
+      "          (2): Dropout(p=0.0, inplace=False)\n",
+      "          (3): Linear(in_features=3072, out_features=768, bias=True)\n",
+      "          (4): Dropout(p=0.0, inplace=False)\n",
+      "        )\n",
+      "      )\n",
+      "      (encoder_layer_10): EncoderBlock(\n",
+      "        (ln_1): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "        (self_attention): MultiheadAttention(\n",
+      "          (out_proj): NonDynamicallyQuantizableLinear(in_features=768, out_features=768, bias=True)\n",
+      "        )\n",
+      "        (dropout): Dropout(p=0.0, inplace=False)\n",
+      "        (ln_2): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "        (mlp): MLPBlock(\n",
+      "          (0): Linear(in_features=768, out_features=3072, bias=True)\n",
+      "          (1): GELU(approximate='none')\n",
+      "          (2): Dropout(p=0.0, inplace=False)\n",
+      "          (3): Linear(in_features=3072, out_features=768, bias=True)\n",
+      "          (4): Dropout(p=0.0, inplace=False)\n",
+      "        )\n",
+      "      )\n",
+      "      (encoder_layer_11): EncoderBlock(\n",
+      "        (ln_1): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "        (self_attention): MultiheadAttention(\n",
+      "          (out_proj): NonDynamicallyQuantizableLinear(in_features=768, out_features=768, bias=True)\n",
+      "        )\n",
+      "        (dropout): Dropout(p=0.0, inplace=False)\n",
+      "        (ln_2): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "        (mlp): MLPBlock(\n",
+      "          (0): Linear(in_features=768, out_features=3072, bias=True)\n",
+      "          (1): GELU(approximate='none')\n",
+      "          (2): Dropout(p=0.0, inplace=False)\n",
+      "          (3): Linear(in_features=3072, out_features=768, bias=True)\n",
+      "          (4): Dropout(p=0.0, inplace=False)\n",
+      "        )\n",
+      "      )\n",
+      "    )\n",
+      "    (ln): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "  )\n",
+      "  (heads): Sequential(\n",
+      "    (head): Linear(in_features=768, out_features=1000, bias=True)\n",
+      "  )\n",
+      ")\n"
+     ]
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "vit.a",
+   "id": "228db99bf788f2aa"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-20T15:02:07.872689Z",
+     "start_time": "2025-05-20T15:02:07.868261Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "torch.empty(1, 256, 678).normal_(std=0.02).shape",
+   "id": "1acfb805f3b2f740",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 256, 678])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -34,7 +281,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "336582b45ebc619a"
+   "id": "9be12ec2558b9ac5"
   }
  ],
  "metadata": {
