Better understand author's code with updated diagrams

--- a/Methods/IUF/iuf_testing.ipynb
+++ b/Methods/IUF/iuf_testing.ipynb
@@ -6,7 +6,14 @@
    "source": [
     "# Incremental Unified Framework (IUF) Testing\n",
     "\n",
-    "We want to test each component and module in isolation to make sure it's working properly"
+    "We want to test each component and module in isolation to make sure it's working properly\n",
+    "\n",
+    "_TODO:_\n",
+    "1. Go through ViT code and understand unique implementation\n",
+    "2. Update to include modules for creating Discriminator, Encoder, & Decoder\n",
+    "3. Check for paper/code for architecture or hyperparams match our implementation (num_heads, dim, etc)\n",
+    "4. Latent Space Regularization\n",
+    "5. Gradient Update Regularization\n"
    ],
    "id": "79cd97f4118f2f3d"
   },
