Finished ViT implementation

--- a/Methods/IUF/iuf_testing.ipynb
+++ b/Methods/IUF/iuf_testing.ipynb
@@ -20,8 +20,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-10T17:25:59.202122Z",
-     "start_time": "2025-06-10T17:25:59.199226Z"
+     "end_time": "2025-06-10T19:17:28.867797Z",
+     "start_time": "2025-06-10T19:17:27.401299Z"
     }
    },
    "cell_type": "code",
@@ -34,49 +34,104 @@
    ],
    "id": "d72cdfd011c9690b",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-10T17:27:17.153386Z",
-     "start_time": "2025-06-10T17:27:15.667701Z"
+     "end_time": "2025-06-10T19:58:11.281132Z",
+     "start_time": "2025-06-10T19:58:11.276558Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "B = 8\n",
-    "L = 224*224\n",
-    "E = 16\n",
-    "q = torch.rand(B, L, E)\n",
-    "k = torch.rand(B, L, E).transpose(-2, -1)\n",
-    "for batch in range(B):\n",
-    "    torch.matmul(q[batch], k[batch])\n",
-    "    break"
+    "tmp1 = torch.rand(8, 196, 64)\n",
+    "pos_vec = torch.rand(1, 196, 64)\n",
+    "output = (tmp1+pos_vec)\n",
+    "i = j = k = 2\n",
+    "print(tmp1[i,j,k])\n",
+    "print(pos_vec[0,j,k])\n",
+    "print(output[i,j,k])"
    ],
    "id": "1acfb805f3b2f740",
-   "outputs": [],
-   "execution_count": 3
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.9186)\n",
+      "tensor(0.3805)\n",
+      "tensor(1.2991)\n"
+     ]
+    }
+   ],
+   "execution_count": 21
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-10T19:42:53.002497Z",
+     "start_time": "2025-06-10T19:42:52.991221Z"
+    }
+   },
    "cell_type": "code",
    "source": [
-    "sm = nn.Softmax(dim=-1)\n",
-    "smq = sm(q)\n",
-    "smq[0,0]"
+    "class ViT(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.conv1 = nn.Conv2d(3, 64, kernel_size=16, stride=16, padding=0, bias=False)\n",
+    "        self.ln1 = nn.LayerNorm(64)\n",
+    "        self.gelu = nn.GELU()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "\n",
+    "        # out = self.gelu(self.ln1(ein.rearrange(self.conv1(x), 'b c h w -> b (h w) c')))\n",
+    "        out = self.conv1(x)\n",
+    "\n",
+    "        return out.shape\n",
+    "\n",
+    "vt = ViT()\n",
+    "vt(torch.rand(8, 3, 224, 224))"
    ],
    "id": "b191f00b8ec8933f",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([8, 64, 14, 14])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 9
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-10T19:38:32.196260Z",
+     "start_time": "2025-06-10T19:38:32.192777Z"
+    }
+   },
    "cell_type": "code",
-   "source": "vit_block(torch.rand(10, 100, 3)).shape",
+   "source": "torch.rand()",
    "id": "a7b580c904af39fb",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(-0.9900)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 8
   },
   {
    "metadata": {},
