added in discriminator

--- a/Methods/IUF/iuf_testing.ipynb
+++ b/Methods/IUF/iuf_testing.ipynb
@@ -20,8 +20,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-10T19:17:28.867797Z",
-     "start_time": "2025-06-10T19:17:27.401299Z"
+     "end_time": "2025-06-11T15:03:37.291555Z",
+     "start_time": "2025-06-11T15:03:35.289081Z"
     }
    },
    "cell_type": "code",
@@ -30,7 +30,8 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "from Methods.IUF.ViT import MultiHeadSelfAttention, ViTBlock, ViT"
+    "from Methods.IUF.ViT import MultiHeadSelfAttention, ViTBlock, ViT\n",
+    "from Methods.IUF.utils.discriminator import Discriminator"
    ],
    "id": "d72cdfd011c9690b",
    "outputs": [],
@@ -39,99 +40,90 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-10T19:58:11.281132Z",
-     "start_time": "2025-06-10T19:58:11.276558Z"
+     "end_time": "2025-06-11T15:03:39.546387Z",
+     "start_time": "2025-06-11T15:03:37.815563Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "tmp1 = torch.rand(8, 196, 64)\n",
-    "pos_vec = torch.rand(1, 196, 64)\n",
-    "output = (tmp1+pos_vec)\n",
-    "i = j = k = 2\n",
-    "print(tmp1[i,j,k])\n",
-    "print(pos_vec[0,j,k])\n",
-    "print(output[i,j,k])"
+    "vt = Discriminator()\n",
+    "dummy = torch.rand(8, 3, 224, 224)\n",
+    "out = vt(dummy)"
    ],
    "id": "1acfb805f3b2f740",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(0.9186)\n",
-      "tensor(0.3805)\n",
-      "tensor(1.2991)\n"
-     ]
-    }
-   ],
-   "execution_count": 21
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-10T19:42:53.002497Z",
-     "start_time": "2025-06-10T19:42:52.991221Z"
+     "end_time": "2025-06-11T15:03:40.141746Z",
+     "start_time": "2025-06-11T15:03:40.136710Z"
     }
    },
    "cell_type": "code",
-   "source": [
-    "class ViT(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "\n",
-    "        self.conv1 = nn.Conv2d(3, 64, kernel_size=16, stride=16, padding=0, bias=False)\n",
-    "        self.ln1 = nn.LayerNorm(64)\n",
-    "        self.gelu = nn.GELU()\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "\n",
-    "        # out = self.gelu(self.ln1(ein.rearrange(self.conv1(x), 'b c h w -> b (h w) c')))\n",
-    "        out = self.conv1(x)\n",
-    "\n",
-    "        return out.shape\n",
-    "\n",
-    "vt = ViT()\n",
-    "vt(torch.rand(8, 3, 224, 224))"
-   ],
-   "id": "b191f00b8ec8933f",
+   "source": "out[0].detach().numpy()",
+   "id": "71a4199ecdbad2b7",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([8, 64, 14, 14])"
+       "array([[0.07836362, 0.08676462, 0.07668877, 0.08307239, 0.09868931,\n",
+       "        0.0542396 , 0.07430747, 0.10606543, 0.08609241, 0.0982074 ,\n",
+       "        0.061308  , 0.09620103],\n",
+       "       [0.07406266, 0.0836736 , 0.07552233, 0.08219466, 0.08844579,\n",
+       "        0.06839662, 0.07061043, 0.11601701, 0.08648423, 0.11906297,\n",
+       "        0.05939075, 0.07613888],\n",
+       "       [0.07797493, 0.08565109, 0.08524148, 0.08349221, 0.08942299,\n",
+       "        0.05774301, 0.07452003, 0.12010112, 0.08145637, 0.10456853,\n",
+       "        0.05425137, 0.08557696],\n",
+       "       [0.07512388, 0.07757302, 0.07695831, 0.09436318, 0.09606331,\n",
+       "        0.06279685, 0.07609739, 0.1050284 , 0.07716016, 0.10100695,\n",
+       "        0.06035652, 0.09747207],\n",
+       "       [0.08232392, 0.07259124, 0.07080487, 0.08638152, 0.10194635,\n",
+       "        0.06018919, 0.06923473, 0.1119076 , 0.08445992, 0.1116529 ,\n",
+       "        0.06102447, 0.08748328],\n",
+       "       [0.07027172, 0.08163323, 0.08983587, 0.08131117, 0.09678767,\n",
+       "        0.06587564, 0.08217293, 0.12186016, 0.07535907, 0.09478995,\n",
+       "        0.0551501 , 0.08495247],\n",
+       "       [0.07985274, 0.09406173, 0.08421998, 0.07401413, 0.0972398 ,\n",
+       "        0.07093838, 0.06809235, 0.09870318, 0.08314109, 0.10198345,\n",
+       "        0.05954238, 0.08821075],\n",
+       "       [0.07696267, 0.08032174, 0.08011682, 0.08356911, 0.09342502,\n",
+       "        0.06166014, 0.07945558, 0.10214924, 0.08460584, 0.10223921,\n",
+       "        0.06165074, 0.09384397]], dtype=float32)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-10T19:38:32.196260Z",
-     "start_time": "2025-06-10T19:38:32.192777Z"
+     "end_time": "2025-06-11T15:03:50.716766Z",
+     "start_time": "2025-06-11T15:03:50.711760Z"
     }
    },
    "cell_type": "code",
-   "source": "torch.rand()",
+   "source": "out[0][0].sum()",
    "id": "a7b580c904af39fb",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(-0.9900)"
+       "tensor(1., grad_fn=<SumBackward0>)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 4
   },
   {
    "metadata": {},
